Update session upload endpoints to work with axios
